LPS-53922 Fix alignment issue with ddm-display-template taglib

--- a/portal-web/docroot/html/css/taglib/ddm_template.css
+++ b/portal-web/docroot/html/css/taglib/ddm_template.css
@@ -1,3 +1,9 @@
-.display-template .field-content {
-	display: inline-block;
+.display-template {
+	.field-content {
+		display: inline-block;
+	}
+
+	.form-group-inline {
+		vertical-align: baseline;
+	}
 }
